ecmascript/parser/tests/test262-error-references/fail/0ffb1c3ecf85660e.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/0ffb1c3ecf85660e.js:1:1
  |
1 | "Hello
  | ^^^^^^

